--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -52,9 +52,9 @@
         <div class="h3">Emily Gong</div>
         <div class="b3 label grey-text">CLIENT LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.jpg" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.jpg" class="person-link"></a>
-          <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.jpg" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/emilyfgong/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="#" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:emily.f.gong@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -81,9 +81,9 @@
         <div class="h3">June Liu</div>
         <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="https://www.juneliu.me/"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/june-ycliu/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="https://www.juneliu.me/" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:yunchun.june@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -105,9 +105,9 @@
         <div class="h3">June Liu</div>
         <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/june-ycliu/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="https://www.juneliu.me/" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:yunchun.june@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
       <img src="images/about/june.png" class="flexblock-headshot image right"/>
@@ -122,9 +122,9 @@
         <div class="h3">Yingli Sieh</div>
         <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/yinglisieh/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="https://ysieh.github.io/Portfolio/"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:yingli.sieh@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/yinglisieh/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="https://ysieh.github.io/Portfolio/" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:yingli.sieh@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -151,9 +151,9 @@
         <div class="h3">Qian Wang</div>
         <div class="b3 label grey-text">DEV LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="http://www.qianwang.design/"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/qian-wang-11513314a/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="http://www.qianwang.design/" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:wangqian.evelyn@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -175,9 +175,9 @@
         <div class="h3">Qian Wang</div>
         <div class="b3 label grey-text">DEV LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/qian-wang-11513314a/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="https://qianwang.design" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:wangqian.evelyn@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
       <img src="images/about/qian.png" class="flexblock-headshot image right"/>
@@ -192,9 +192,9 @@
         <div class="h3">Nina Yang</div>
         <div class="b3 label grey-text">DESIGN LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/ninaqyang/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="http://www.ninaqyang.com/"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:ninaqyang@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/ninaqyang/" target="_blank"><img src="images/about-icon1.svg" class="person-link"></a>
+          <a href="http://www.ninaqyang.com/" target="_blank"><img src="images/about-icon2.svg" class="person-link"></a>
+          <a href="mailto:ninaqyang@gmail.com" target="_blank"><img src="images/about-icon3.svg" class="person-link"></a>
         </div>
       </div>
     </div>
