--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -43,7 +43,7 @@
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our Client</div>
         <div class="flex-h space-above">
-            <img class="image left shadowed" src="images/homepage/1-client-img.png" alt="">
+            <img class="image left shadowed bordered" src="images/liquidnet_logo.jpg" alt="">
             <div>
                 <p>As the foremost dark-pool trading platform, Liquidnet has led the way for privatized and anonymized trading. Institutional investors like banks and insurance companies rely on Liquidnet for liquidity. Beyond simple trade execution, Liquidnet's technology focuses on providing alpha and trading opportunities. In turn, this connects and empowers traders to achieve their best trades possible.</p>
                 <a target="_blank" href="https://www.liquidnet.com/">
