--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -554,7 +554,7 @@
                         <div class="tab-content">
                         <div>
                             <div class="h3">Storyboards to Screens</div>
-                            <ul>
+                            <ul class="tab-bullet purple">
                                 <li>Well-liked storyboards were turned into low-fis</li>
                                 <li>Each storyboard became its own screen</li>
                                 <li>Low-fi screens were built as separate demos</li>
@@ -562,7 +562,7 @@
                         </div>
                         <div>
                             <div class="h3">Proxy Testing</div>
-                            <ul>
+                            <ul class="tab-bullet purple">
                                 <li>We tested our low-fi designs with proxy users</li>
                                 <li>We asked what specific info traders need in-app</li>
                                 <li>This guided the info added in mid-fi screens</li>
