Fixed layout of design page and added remaining pictures

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -245,7 +245,7 @@
 		        <h2>User-Defined Alerts</h2>
 		        <b2>Our visuals demo tests for urgency. Topics covered are color, animation, and sound. We tested a low, medium, and 2 high priority alerts.</b2>
 		        <div class="slideshow-img-wrapper">
-		          <img class="slideshow-img" src="images/design/urgency.svg">
+		          <img class="slideshow-img" src="images/design/Project Website Images/User Define Alert Ver1.png">
 		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
 		        </div>
 		        <div class="dots-wrapper">
@@ -263,7 +263,7 @@
 		        <h2>Minimized View</h2>
 		        <b2>This design was an unconventional, futuristic take. We wanted to challenge the current visual standard. We tested call-to-action through bubble alerts.</b2>
                 <div class="slideshow-img-wrapper">
-                  <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                  <img class="slideshow-img" src="images/design/Project Website Images/Min Ver1.gif">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
 		        <div class="dots-wrapper">
@@ -280,7 +280,7 @@
 		        <h2>Grouping</h2>
 		        <b2>To save screen space and increase efficient use of space in the alert stream, we designed a grouping system that would collect similar alerts under one topic or area.</b2>
                 <div class="slideshow-img-wrapper">
-                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="slideshow-img" src="images/design/Project Website Images/Grouping Ver1.png">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
 		        <div class="dots-wrapper">
@@ -491,7 +491,7 @@
 		        <h2>User-Defined Alerts</h2>
 		        <b2>Sound classifications were previously misleading with red-green backgrounds indicating 'good' or 'bad' - we made our design more neutral and included more options as requested by those testing this concept.</b2>
 		        <div class="slideshow-img-wrapper">
-		          <img class="slideshow-img" src="images/research/slideshow-pic1.png">
+		          <img class="slideshow-img" src="images/design/Project Website Images/User Define Alert Ver2.png">
 		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
 		        </div>
 		        <div class="dots-wrapper">
@@ -509,7 +509,7 @@
 		        <h2>Minimized View</h2>
 		        <b2>The bubble form of the minimized view was extremely popular, though it clashed with the visual design of Liquidnet's current platform. In this update, we incorporated visual design elements like color and shape from our other alert features to make it feel more like a Liquidnet product.</b2>
                 <div class="slideshow-img-wrapper">
-                  <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                  <img class="slideshow-img" src="images/design/Project Website Images/Min Ver2.gif">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
 		        <div class="dots-wrapper">
@@ -526,7 +526,7 @@
 		        <h2>Grouping</h2>
 		        <b2>We focused on improving the visual appearance of the grouped alerts - because they were popular, we made them the same size as normal alerts and also provided more description underneath as context for the grouping itself.</b2>
                 <div class="slideshow-img-wrapper">
-                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="slideshow-img" src="images/design/Project Website Images/Grouping Ver2.png">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
 		        <ul class="red-bullet">
@@ -536,7 +536,7 @@
 		          <span class="slideshow-dots active" onclick=""></span>
 		        </div>
 		      </div>
-		      <img class="slideshow-button" src="images/research/slideshow-right.svg" onclick="showDivs(this, 3)">
+		      <img class="slideshow-button" src="images/research/slideshow-right.svg" onclick="showDivs(this, 0)">
 		    </div>
 		  </div>
 		</div>
