--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -243,7 +243,6 @@
 		        <b2>Our visuals demo tests for urgency. Topics covered are color, animation, and sound. We tested a low, medium, and 2 high priority alerts.</b2>
 		        <div class="slideshow-img-wrapper h-wide">
 		          <img class="slideshow-img" src="images/design/Project Website Images/User Define Alert Ver1.png">
-		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
 		        </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -259,7 +258,7 @@
 		      <div>
 		        <h2>Minimized View</h2>
 		        <b2>This design was an unconventional, futuristic take. We wanted to challenge the current visual standard. We tested call-to-action through bubble alerts.</b2>
-                <div class="slideshow-img-wrapper h-normal">
+                <div class="slideshow-img-wrapper h-wide">
                   <img class="slideshow-img" src="images/design/Project Website Images/Min Ver1.gif">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
@@ -276,7 +275,7 @@
 		      <div>
 		        <h2>Grouping</h2>
 		        <b2>To save screen space and increase efficient use of space in the alert stream, we designed a grouping system that would collect similar alerts under one topic or area.</b2>
-                <div class="slideshow-img-wrapper h-normal">
+                <div class="slideshow-img-wrapper h-wide">
                   <img class="slideshow-img" src="images/design/Project Website Images/Grouping Ver1.png">
                   <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                 </div>
