--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -653,7 +653,7 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Client Feedback</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-wide">
                     <img class="tab-cover-image" src="images/service-blueprint.png">
                     </div>
                     <div class="tab-content">
@@ -676,7 +676,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-wide">
                         <img class="tab-cover-image" src="images/research/feedback-2.jpg">
                     </div>
                     <div class="tab-content"><div>
