--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -188,7 +188,7 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Role Playing</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide">
                         <img class="tab-cover-image" src="images/research/interview.jpg">
                     </div>
                     <div class="tab-content">
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide">
                         <img class="tab-cover-image" src="images/research/collaborative-sketching.jpg">
                     </div>
                     <div class="tab-content">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide">
                         <img class="tab-cover-image" src="images/research/poker.jpg">
                     </div>
                     <div class="tab-content">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide">
                         <img class="tab-cover-image" src="images/research/bestbroker.png">
                     </div>
                     <div class="tab-content">
