--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -397,7 +397,7 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 2)"><b2>Clustering</b2></button>
                 </div>
                 <div class="tab-page active blue">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide contain">
                       <img class="tab-cover-image" src="images/design/feedback-grid.jpg">
                     </div>
                     <div class="tab-content">
@@ -421,7 +421,7 @@
                 </div>
 
                 <div class="tab-page blue">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide contain">
                       <img class="tab-cover-image" src="images/design/kano-model.png">
                     </div>
                     <div class="tab-content">
@@ -445,7 +445,7 @@
                 </div>
 
                 <div class="tab-page blue">
-                    <div class="slideshow-img-wrapper h-normal">
+                    <div class="slideshow-img-wrapper h-wide contain">
                       <img class="tab-cover-image" src="images/design/clustering-2.png">
                     </div>
                     <div class="tab-content">
@@ -629,8 +629,8 @@
         </div>
 		<div class="smaller-section component-title purple-text">GUIDELINES</div>
         <div>After completing the synthesis of our user testing and finishing our last investigation into analogous domains, our team was able to build a guide of recommendations and prototype examples for Liquidnet. We developed the Tradewell Playbook, a resource that captures the guidelines, analogous domain research, and prototypes our team developed. If you want to read about our final findings and view our revised prototypes, please view the Tradewell Playbook at the link below.</div>
-        <div class="section container center">
-            <a target="_blank" href="https://wangqianeve.github.io/CMU-MHCI-Liquidnet/"><img class="b1 img-button" src="images/buttons/button-guidelines.svg" alt="Trufflin Logo"></a>
+        <div class="section">
+            <a target="_blank" href="https://wangqianeve.github.io/MHCI-Trufflin-Website" style="align-self: flex-start"><img class="b1 img-button" src="images/buttons/button-guidelines.svg" alt="Trufflin Logo"></a>
         </div>
 	</div>
 </div>
