--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -19,10 +19,10 @@
     <a href="index.html" class="nav-brand"></a>
     <nav class="nav-menu">
         <a href="research.html">Research</a>
-        <a href="ideation.html" class="active">Ideation</a>
+        <a href="ideation.html" >Ideation</a>
         <a href="design.html" >Design</a>
         <a href="about.html">About</a>
-        <a href="glossary.html" >Glossary</a>
+        <a href="glossary.html" class="active">Glossary</a>
     </nav>
     <a class="menu-button tablet-phone" onclick="openNavMenu()" style="-webkit-mask: url(images/menu.svg); -webkit-mask-size: contain"></a>
 </div>
