another text update

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -547,19 +547,19 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Workflow overload</div>
+                            <div class="h3">Testing remotely</div>
                             <ul class="tab-bullet blue">
-                                <li>Traders typically master a workflow and stick to it</li>
-                                <li>Connected workflows are not highlighted visually</li>
-                                <li>Thus, traders are reluctant to learn new workflows</li>
+                                <li>Our team developed prototypes to be shared with testers</li>
+                                <li>Testers shared their screens to show actions in prototypes</li>
+                                <li>We asked testers to think and ask questions aloud during testing</li>
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Finding features</div>
+                            <div class="h3">Results from testing</div>
                             <ul class="tab-bullet blue">
-                                <li>Due to of visual clutter, new features are hard to find</li>
-                                <li>No in-app help means traders must call sales for help</li>
-                                <li>'Hidden features' in blotter are unused and unseen</li>
+                                <li>Search and navigation was liked for its analytics</li>
+                                <li>Sharing information, images, and email was desired</li>
+                                <li>Grouping and minimized view were the most popular</li>
                             </ul>
                         </div>
                     </div>
