changed headings on all pages to match the same upper/lower casing, also edited some text on the research page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -402,7 +402,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">What We Did</div>
+                            <div class="h3">What we did</div>
                             <ul class="tab-bullet blue">
                                 <li>A four-quadrant grid was made for each research question</li>
                                 <li>The top quadrants were features liked and constructive criticism</li>
@@ -410,7 +410,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">What We Learned</div>
+                            <div class="h3">What we learned</div>
                             <ul class="tab-bullet blue">
                                 <li>Pulling information is a key interaction</li>
                                 <li>Traders avoid new featuers if learning curve is high</li>
@@ -426,7 +426,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">What We Did</div>
+                            <div class="h3">What we did</div>
                             <ul class="tab-bullet blue">
                                 <li>Kano questions were embedded into testing</li>
                                 <li>These questions were about satisfaction with or without our designs</li>
@@ -434,7 +434,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">What We Learned</div>
+                            <div class="h3">What we learned</div>
                             <ul class="tab-bullet blue">
                                 <li>Sound is a satisfier, whereas visuals are a basic need</li>
                                 <li>Grouped alerts are a satisfier, so it's more valuable to pursue</li>
@@ -450,7 +450,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">What We Did</div>
+                            <div class="h3">What we did</div>
                             <ul class="tab-bullet blue">
                                 <li>We sorted our dense feedback grids by categorizing data</li>
                                 <li>We made design guidelines from the comments and suggestions</li>
@@ -458,7 +458,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">What We Learned</div>
+                            <div class="h3">What we learned</div>
                             <ul class="tab-bullet blue">
                                 <li>Clustering helped highlight useful notes for redesigns</li>
                                 <li>Report building and minimized view are valued ideas</li>
@@ -570,7 +570,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Intensive Care Unit (ICU) Study</div>
+                            <div class="h3">Intensive Care Unit (ICU) study</div>
                             <ul class="tab-bullet blue">
                                 <li>Four ICU nurses and volunteers were interviewed</li>
                                 <li>We asked how they handle and understand ICU alerts</li>
@@ -578,7 +578,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Other Domains</div>
+                            <div class="h3">Other domains</div>
                             <ul class="tab-bullet blue">
                                 <li>Air traffic control and idle game research continued</li>
                                 <li>We noted similarities and differences to trading</li>
