--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Idea Generation</div>
+                            <div class="h3">Idea generation</div>
                             <ul class="tab-bullet blue">
                                 <li>Each team member had 8 minutes to draw 8 ideas</li>
                                 <li>A crazy idea: AI that tells you how to trade verbally</li>
@@ -244,7 +244,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Categorizing Ideas</div>
+                            <div class="h3">Categorizing ideas</div>
                             <ul class="bullet">
                                 <li>During sorting, three groupings came about: closure and reports, group feedback, motivating through animations and sound.</li>
                             </ul>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Ideas to Stories</div>
+                            <div class="h3">Ideas to stories</div>
                             <ul class="tab-bullet blue">
                                 <li>Crazy eight ideas inspired our storyboards</li>
                                 <li>Ideas were written into guiding questions</li>
@@ -266,7 +266,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Drawing it Out</div>
+                            <div class="h3">Drawing it out</div>
                             <ul class="tab-bullet blue">
                                 <li>The three categories from crazy eights were followed</li>
                                 <li>We each drew out a few stories for each category</li>
@@ -420,7 +420,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Valuable Ideas</div>
+                            <div class="h3">Valuable ideas</div>
                             <ul class="tab-bullet blue">
                                 <li>Some ideas overlap with new Liquidnet products</li>
                                 <li>Ideas related to 'unique data' for traders well received</li>
@@ -428,7 +428,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Constructive Criticism</div>
+                            <div class="h3">Constructive criticism</div>
                             <ul class="tab-bullet blue">
                                 <li>Concepts on optimizing trader productivity were weak</li>
                                 <li>Social media could be a good model for our designs</li>
@@ -443,7 +443,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Our New Direction</div>
+                            <div class="h3">Our new direction</div>
                             <ul class="tab-bullet blue">
                                 <li>We narrowed our project focus with faculty and clients</li>
                                 <li>Clients asked for analogous domain research to be done</li>
@@ -451,7 +451,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">We Want To...</div>
+                            <div class="h3">We want to...</div>
                             <ul class="tab-bullet blue">
                                 <li>Aim for better usability, an emotionally positive user experience, and more efficient data visualizations.</li>
                                 <li>Aim for better teamwork and more customized content to assist traders in improving their performance.</li>
@@ -563,7 +563,7 @@
                         </div>
                         <div class="tab-content">
                         <div>
-                            <div class="h3">Storyboards to Screens</div>
+                            <div class="h3">Storyboards to screens</div>
                             <ul>
                                 <li>Well-liked storyboards were turned into low-fis</li>
                                 <li>Each storyboard became its own screen</li>
@@ -571,7 +571,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Proxy Testing</div>
+                            <div class="h3">Proxy testing</div>
                             <ul>
                                 <li>We tested our low-fi designs with proxy users</li>
                                 <li>We asked what specific info traders need in-app</li>
@@ -640,7 +640,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Showing Interactions</div>
+                            <div class="h3">Showing interactions</div>
                             <ul>
                                 <li>We made multiple screens of each concept</li>
                                 <li>This showed intended interactions with it</li>
@@ -699,7 +699,7 @@
                     </div>
                     <div class="tab-content">
                         <div>
-                            <div class="h3">Reviewing Feedback</div>
+                            <div class="h3">Reviewing feedback</div>
                             <ul class="tab-bullet blue">
                                 <li>Our team goals align with our client's needs</li>
                                 <li>We decided to focus on alert designs</li>
@@ -707,7 +707,7 @@
                             </ul>
                         </div>
                         <div>
-                            <div class="h3">Summer Objectives</div>
+                            <div class="h3">Summer objectives</div>
                             <ul class="tab-bullet blue">
                                 <li>Our team will make prototypes for Liquidnet Labs</li>
                                 <li>This will be a chance to user test with traders</li>
