can't remember what I changed but I bet it was useful

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -472,7 +472,7 @@
         </div>
 
         <div class="smaller-section component-title purple-text">ROUND 2 PROTOTYPES</div>
-        <div>After condensing a considerable amount of generative data on traders as mentioned in the last section, our team used the synthesized findings to iterate on our prototypes. Below are examples of how the alerts shown earlier evolved.</div>
+        <div>After condensing our responses from Liquidnet Labs as mentioned in the last section, our team used the synthesized findings to iterate on our prototypes. Below are examples of how the alerts shown earlier evolved.</div>
         <!-- Carousal 2 -->
         <div class="section">
 		  <div class="bg-light-blue slideshow-wrapper">
