changed file names in design.html so images appear on the alerts page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -339,7 +339,7 @@
                 </div>
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper h-wide">
-                      <img class="tab-cover-image" src="images/design/directed-storytelling.jpg">
+                      <img class="tab-cover-image" src="images/design/directed-storytelling.JPG">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -566,7 +566,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper h-wide">
-                      <img class="tab-cover-image" src="images/design/analogous-testing.jpg">
+                      <img class="tab-cover-image" src="images/design/analogous-testing.JPG">
                     </div>
                     <div class="tab-content">
                         <div>
