added round photos for design page, fixed typos in glossary

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -601,7 +601,7 @@
         <div class="smaller-section">After completing the synthesis of our user testing and finishing our last investigation into analogous domains, our team was able to build a guide of recommendations and prototype examples for Liquidnet. We developed the Tradewell Playbook, a resource that captures the guidelines, analogous domain research, and prototypes our team developed.</div>
         <!--        item-->
         <div class="smaller-section container flex-h mobile-v">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/design/guidelines.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Guidelines</div>
                 <div class="flex-h">
@@ -610,7 +610,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h mobile-v">
-            <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+            <img src="images/design/icu-nurse.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Analogous Domain Research</div>
                 <div class="flex-h">
@@ -619,7 +619,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h mobile-v">
-            <img src="images/design/usability.jpg" class="flexblock-headshot image left"/>
+            <img src="images/design/prototype-square.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Prototypes</div>
                 <div class="flex-h">
