--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -115,7 +115,7 @@
         <a href="https://www.investopedia.com/terms/c/commission.asp">Source: Investopedia</p></a>
 
         <h3>Information Leakage</h3>
-        <p>in dark pool trading, the (usually unintentional) sharing of information that should be kept anonymous or hidden in order prevent competitors from taking advantage of ones trading strategy.</p>
+        <p>In dark pool trading, the (usually unintentional) sharing of information that should be kept anonymous or hidden in order prevent competitors from taking advantage of ones trading strategy.</p>
 
         <h3>Matches</h3>
         <p>Opposite requests for a security or derivative at the same price.<br/>
@@ -158,7 +158,7 @@
         <a href="http://www.businessdictionary.com/definition/stakeholder.html">Source: Business Dictionary</p></a>
 
         <h3>Swimlane</h3>
-        <p>A single row within a diagram, typical in process flow diagrams and flow-chartsS.<br/>
+        <p>A single row within a diagram, typical in process flow diagrams and flow-charts.<br/>
         <a href="https://www.lucidchart.com/pages/swimlane-diagram">Source: Lucid Chart</p></a>
     </div>
 </div>
