fixed sizing of left image in glossary

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -55,7 +55,7 @@
 <!-- Banner -->
 <div class="banner section">
     <img src="images/glossary/right.svg" class="bg right">
-    <img src="images/glossary/left.svg" class="bg left">
+    <img src="images/glossary/left.svg" class="bg left glossary">
     <div class="container">
         <div class="page-title purple-text">Glossary</div>
         <div class="banner-paragraph">This glossary covers domains that the average reader may not be well informed about. Financial topics are separated from those that are trading specific, and design related concepts from HCI methods will also be referenced below.</div>
