changed circular images for user testing segment

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -300,7 +300,7 @@
         <div class="smaller-section">We tested hi-fi prototypes onsite and learned which concepts and features had the most value for traders. This segment some key points from our synthesized notes - they informed our final revisions of the prototype.</div>
 <!--        item-->
         <div class="smaller-section container flex-h mobile-v">
-            <img src="images/design/color-animation.gif" class="flexblock-headshot image left"/>
+            <img src="images/design/urgent-2.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Increase the intensity of high urgency alerts</div>
                 <div class="flex-h">
@@ -309,7 +309,7 @@
             </div>
         </div>
         <div class="smaller-section container flex-h mobile-v">
-            <img src="images/design/wriggle.gif" class="flexblock-headshot image left"/>
+            <img src="images/design/animation.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Use animation for conveying data</div>
                 <div class="flex-h">
@@ -319,7 +319,7 @@
         </div>
         <div class="smaller-section container flex-h mobile-v">
 
-            <img src="images/Alert.png" class="flexblock-headshot image left"/>
+            <img src="images/design/color-palette-icon.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
                 <div class="card-title">Features to keep</div>
                 <div class="flex-h">
