Replaced low res photos on research page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -668,7 +668,7 @@
                 </div>
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper">
-                    <img class="tab-cover-image" src="images/service-blueprint.png">
+                    <img class="tab-cover-image" src="images/research/sb1.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -790,7 +790,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/prop.png">
+                        <img class="tab-cover-image" src="images/research/hmw.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
