--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -57,7 +57,7 @@
     <img src="images/design/left.svg" class="bg left">
     <div class="container">
         <div class="page-title purple-text">Design</div>
-        <div class="banner-paragraph">In the last phase of our project, our team evaluated our mid-fi prototypes through a visioning session with our clients. In this phase, we iterated on hi-fi prototypes, completed developing our guidelines, and tested our work onsite at Liquidnet and in remote testing. </div>
+        <div class="banner-paragraph">In the last phase of our project, our team evaluated our mid-fi prototypes with our clients and through preliminary proxy testing. In this phase, we made hi-fi prototypes based on the feedback from our clients, and conducted user testing at Liquidnet and through remote calls.  </div>
     </div>
 </div>
 
@@ -66,23 +66,23 @@
     <div class="container">
         <div class="section-title">Overview</div>
         <div class="section-title-line purple-bg"></div>
-        <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value ot our clients or users.</div>
+        <div class="smaller-section flex-h">This phase consists of research through designing, case studies, and user testing. Through this process, we go from ideation concepts to tangible prototypes, creating a full suite of possible alert designs.</div>
         <div class="card card-style1 smaller-section">
             <img src="images/design/problem-icon.jpg" alt="" class="card-icon">
             <div class="ipad-bin">
                 <img src="images/design/problem-icon.jpg" alt="" class="card-icon-ipad">
                 <div class="h2">Problem</div>
-                <p class="paragraph-big">How do we collect and incorporate feedback to make our prototype applicable to trader's alert ecosystem?</p>
+                <p class="paragraph-big">We had to create an alert system design with opportunities to grow into an individualized trading platform. </p>
             </div>
             <img src="images/design/challenge-icon.jpg" alt="" class="card-icon">
             <div class="ipad-bin">
                 <img src="images/design/challenge-icon.jpg" alt="" class="card-icon-ipad">
                 <div class="h2">Challenge</div>
-                <p class="paragraph-big">How do we design alerts to help attract users to Liquidnet and encourage them to take action in the front-end?</p>
+                <p class="paragraph-big">We had to do user testing with a limited set of real/proxy users that could speak from enough experience.  </p>
             </div>
         </div>
         <div class="h2 smaller-section">Design Journey</div>
-        <div class="flex-h">Research was a running theme throughout our design journey. Each of the steps below address how we used design to answer our research questions, and how our findings influenced our final product.</div>
+        <div class="flex-h">Research in service to design was a running theme throughout our design journey. Each of the steps below address how we used design to answer our research questions, and how our findings influenced our final product.</div>
         <!--arrows-->
         <div class="smaller-section">
             <div class="flex-h even-wrapper full desktop">
@@ -104,11 +104,11 @@
             </div>
             <div class="flex-h even-wrapper full tablet-phone-v">
                 <div class="arrow-text h3 text-center tablet-phone">Design Research</div>
-                <div class="text-box">To make our work suitable for testing at Liquidnet, we started with hi-fi designs and did research through user testing.</div>
+                <div class="text-box">To make our work suitable for testing at Liquidnet, we started with hi-fi designs and did user testing.</div>
                 <div class="arrow-text h3 text-center tablet-phone">User Testing</div>
-                <div class="text-box">Our team used onsite interviews and remote calls for testing. We talked to proxy traders and relationship managers.</div>
+                <div class="text-box">Our team used onsite interviews and remote calls for testing. We talked to traders, relationship managers, and proxy users for feedback and input on designs.</div>
                 <div class="arrow-text h3 text-center tablet-phone">Final Product</div>
-                <div class="text-box">New analogous domain research and feedback from user testing gave us direction for our final product.</div>
+                <div class="text-box">New analogous domain research and feedback from user testing helped inform the development of our final product.</div>
             </div>
         </div>
     </div>
@@ -119,8 +119,8 @@
     <div class="container">
         <div class="section-title">Design Research</div>
         <div class="section-title-line purple-bg"></div>
-        <div class="smaller-section">In preparation for onsite research, we refined our existing prototypes analogous research. This focused on specific case studies related to trading scenarios, and later expanded to basic research.</div>
-        <div class="smaller-section container flex-h">
+        <div class="smaller-section">In preparation for onsite research, we refined our existing prototypes using insights from analogous research. This focused on specific case studies related to trading scenarios testing alert streaming and urgency. </div>
+        <div class="smaller-section container flex-h mobile-v">
             <img src="images/design/cookie-clicker-square.png" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Alert Case Studies</div>
@@ -143,13 +143,13 @@
             <div class="quote-bubble bg-light-purple">
                 <div class="card-title">Refining Prototypes</div>
                 <div class="flex-h">
-                    <div class="b3">We developed hi-fi prototypes for onsite testing. Designs came from the spring's mid-fi prototypes combined with paradigms from analogous case studies.</div>
+                    <div class="b3">We developed hi-fi prototypes for onsite testing. The prototypes doubled up as a research tool for us to better ask user behavioral as well as evaluative questions to understand their state of mind. </div>
                 </div>
             </div>
         </div>
         <div class="smaller-section h2">How did we come to these concepts?</div>
         <div class="smaller-section space-above component-title purple-text">DESIGN BRAINSTORMING</div>
-        <div>Our team first revisited the concepts brainstormed last semester. Due to difficulties interviewing traders, we used trading analogous case studies develop design guidelines for trading software.</div>
+        <div>Our team first revisited the concepts brainstormed last semester. Due to difficulties interviewing traders, we used multiple sources of information to develop design guidelines for trading software.</div>
         <!-- Carousel 1 -->
         <div class="section">
             <div class="carousel">
