fixed blog images

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -50,10 +50,10 @@
       <img src="images/about/emily.png" class="flexblock-headshot image left"/>
       <div class="about-intro-header">
         <div class="h3">Emily Gong</div>
-        <div class="b3 label grey-text">CLIENT LEAD</div>
+        <div class="b3 label grey-text">PROJECT MANAGER</div>
         <div class="person-links">
           <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.jpg" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.jpg" class="person-link"></a>
+          <a href="https://emilyfgong.com/"><img src="images/about-icon2.jpg" class="person-link"></a>
           <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.jpg" class="person-link"></a>
         </div>
       </div>
@@ -220,11 +220,11 @@
     <div class="section-title-line green-bg"></div>
     <div class="flex-h gallery">
       <div class="blog"> 
-        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/research/blog-1-pic.jpg" class="blog-img"></a>
         <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><div class="blog-descript-info">Understanding our Users</div></a>
       </div>
       <div class="blog">
-        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><img src="images/about/blog-2-pic.jpg" class="blog-img"></a>
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><img src="images/research/blog-2-pic.jpg" class="blog-img"></a>
         <a href="https://sites.google.com/andrew.cmu.edu/trufflin/summer-sprint-1-diving-deeper-into-alerts"><div class="blog-descript-info">Diving Deeper Into Alerts</div></a>
       </div>
       <div class="blog">
